--- a/uebung-flexbox.html
+++ b/uebung-flexbox.html
@@ -22,14 +22,15 @@
 
 				</div>
 				<div class="col sea-green">
-
 				</div>
 
 				<div class="col black">
 
 				</div>
-
-
+				<div class="col middle-red">
+				</div>
+				<div class="col orange">
+				</div>
 			</div>
 		</section>
 	</div>
